--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,9 @@ body {
   font-weight: <weight>;
   font-style: normal;
 }
+
+hr {
+    border: 0;
+    border-top: 1px solid #eee;
+    margin: 20px 0;
+}
