--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,9 @@ hr.light {
     border-top: 1px solid #eee;
     margin: 20px 0;
 }
+
+hr.new {
+    border: 0;
+    border-top: 2 solid #262626;
+    margin: 20px 0;
+}
