--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,6 @@ hr.light {
 
 hr.new {
     border: 0;
-    border-top: 2 solid #262626;
+    border-top: 2px solid #262626;
     margin: 20px 0;
 }
